gcc/testsuite/rust/rustc/ui/error-codes/E0646.rs
fn main() where (): Copy {} // { dg-error ".E0646." "" { target *-*-* } }

